Initial Working Copy

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 token_calendar_v3_calget_endpoint.pickle
 client_secret_calendar_api.json
+token_photoslibrary_v1_mediasend_endpoint.pickle
 .CacheFolder/
